2001-09-27  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-copy-local-variables): Simplified.
	(w3m-region): Set `w3m-current-base-url'.

	* w3m.el: Fix the bug reported in [emacs-w3m:01564].
	(w3m-current-base-url): New buffer-local variable.
	(w3m-clear-local-variables): Handle `w3m-current-base-url'.
	(w3m-copy-local-variables): Ditto.
	(w3m-attributes): Change spec of return value.
	(w3m-w3m-attributes): Ditto.
	(w3m-local-attributes): Ditto.
	(w3m-base-url): New macro.
	(w3m-expand-url): Make the second argument `base' optional, and
	refer `w3m-current-base-url' when a relative URL is canonicalized.
	(w3m-fontify-anchors): Follow change of `w3m-expand-url'.
	(w3m-fontify-images): Ditto.
	(w3m-toggle-inline-images): Ditto.
	(w3m-exec): Call `w3m-base-url' to set `w3m-current-base-url'.

	* w3m-form.el (w3m-form-new): Canonicalize `action' whenever this
	function is called.
	(w3m-form-parse-forms): Follow change of `w3m-form-new'.
	(w3m-form-submit): Ditto.
	(w3m-form-input-map-set): Follow change of `w3m-expand-url'.

2001-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Position point to the current url and
	highlight the line when the page is for listing the history
	(suggested by SHIRAI-san).
	(w3m-history-current-url-face): New face.
	(w3m-image-face, w3m-arrived-anchor-face, w3m-anchor-face): Fix
	doc-string.

2001-09-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-about-db-history-today): New defsubst.
	(w3m-about-db-history): If arrived time within 18 hours, display
	with "HH:MM:SS".

2001-09-22  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-isize-sports.el (shimbun-isize-sports-group-alist):
	Follow the change of the Web site.

2001-09-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-ucs.el (w3m-euc-japan-encoder): Convert lain-jisx0201 to ASCII;
	Avoid deep nesting.
	(TopLevel): Don't require `w3m-macro'.

2001-09-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
