@@ -3678,12 +3678,19 @@ the request."
 				 w3m-default-content-type)
 			 w3m-content-type-alist nil t)))
 		 (setq ct (if (string= "" s) w3m-default-content-type s)))))
-	(if (not (w3m-exec url nil reload cs ct post-data referer))
-	    (progn
-	      (w3m-history-push (w3m-real-url url)
-				(list :title (file-name-nondirectory url)))
-	      (w3m-history-push w3m-current-url)
-	      (w3m-refontify-anchor))
+	(cond
+	 ((and (not reload)
+	       (stringp w3m-current-url)
+	       (string= url w3m-current-url))
+	  (w3m-refontify-anchor)
+	  (or (when name (w3m-search-name-anchor name))
+	      (goto-char (point-min))))
+	 ((not (w3m-exec url nil reload cs ct post-data referer))
+	  (w3m-history-push (w3m-real-url url)
+			    (list :title (file-name-nondirectory url)))
+	  (w3m-history-push w3m-current-url)
+	  (w3m-refontify-anchor))
+	 (t
 	  (w3m-history-push w3m-current-url (list :title w3m-current-title))
 	  (w3m-history-add-properties (list :referer referer
 					    :post-data post-data)
@@ -3695,7 +3702,7 @@ the request."
 	    (and w3m-force-redisplay (sit-for 0))
 	    (w3m-toggle-inline-images 'force reload))
 	  (setq buffer-read-only t)
-	  (set-buffer-modified-p nil))
+	  (set-buffer-modified-p nil)))
 	(w3m-arrived-add orig w3m-current-title nil nil cs ct))
       (setq localpath (and (or (w3m-url-local-p url)
 			       (w3m-url-dtree-p url))
